Bug 217312 - "Save As" dialog pops up when selecting text in kate while KGet is visible in system tray
Summary: "Save As" dialog pops up when selecting text in kate while KGet is visible in...
Status: RESOLVED FIXED
Alias: None
Product: kget
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Ubuntu Unspecified
: NOR normal
Target Milestone: ---
Assignee: KGet bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-12-04 10:49 UTC by Andreas Pietzowski
Modified: 2009-12-20 18:46 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Andreas Pietzowski 2009-12-04 10:49:03 UTC
Version:            (using KDE 4.3.4)
Installed from:    Ubuntu Packages

I found a strange behavior. To reproduce it please follow the steps:

- Expand your system tray to see all items
- Open a CSS file in Kate
- Select some rows with the mouse and press Ctrl-C

=> A KGet Save As dialog pops up

- Hide KGet in the system tray
- Again select some CSS lines and press Ctrl-C

=> nothing happens (as it should I guess)

I hope you can reproduce this annoying (and also strange) behavior.
Comment 1 FiNeX 2009-12-04 22:32:46 UTC
Do you have "check clipboard for download files" option enabled in Kget or did you enabled klipper actions?
Comment 2 Matthias Fuchs 2009-12-20 18:08:15 UTC
This also happens with trunk when checking clipboard is activated, I'll look into it.
Comment 3 Matthias Fuchs 2009-12-20 18:46:43 UTC
SVN commit 1064344 by mfuchs:

Better checks if clipboard contents is a valid url.

BUG:217312

 M  +5 -6      mainwindow.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1064344