Better checks if clipboard contents is a valid url.

BUG:217312

svn path=/trunk/KDE/kdenetwork/kget/; revision=1064344